@@ -11,6 +11,7 @@ import java.time.LocalDate;
 import java.time.Month;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 @RestController
 @RequestMapping("/admin/user")
@@ -22,23 +23,33 @@ public class AdminUsersController {
     @GetMapping("/{id}")
     public User getOne(@PathVariable("id") Long id) {
         //return userService.getUserById(userId);
-        User user = new User();
-        user.setFirstName("József");
-        user.setLastName("Kiss");
-        user.setEmail("jozsef.kiss@test.com");
-        user.setPassword("test");
-        user.setDateOfBirth(LocalDate.of(1970, Month.FEBRUARY, 28));
-        user.setDateOfEntry(LocalDate.of(2010, Month.MAY, 12));
-        user.setDateOfEndTrial(LocalDate.of(2010, Month.AUGUST, 12));
-        user.setIsOnTrial(false);
-        Group group1 = new Group();
-        user.setGroups(new ArrayList<Group>(Arrays.asList(group1)));
-        Department dep1=new Department();
-        user.setDepartments(new ArrayList<Department>(Arrays.asList(dep1)));
-        user.setPosition("testposition");
-        user.setRole(Roles.EMPLOYEE);
-        user.setNumberOfChildren(3);
-        user.setOtherAbsenceEnt("none");
+        Department dep = Department.builder()
+                .groups(List.of())
+                .leaders(List.of())
+                .name("TestDepartment")
+                .build();
+        Group group = Group.builder()
+                .department(dep)
+                .employees(List.of())
+                .name("TestGroup")
+                .build();
+
+        User user = User.builder()
+                .firstName("József")
+                .lastName("Kiss")
+                .email("jozsef.kiss@test.com")
+                .password("test")
+                .dateOfBirth(LocalDate.of(1970, Month.FEBRUARY, 28))
+                .dateOfEntry(LocalDate.of(2010, Month.MAY, 12))
+                .dateOfEndTrial(LocalDate.of(2010, Month.AUGUST, 12))
+                .isOnTrial(false)
+                .groups(List.of(group))
+                .departments(List.of(dep))
+                .position("testposition")
+                .role(Roles.EMPLOYEE)
+                .numberOfChildren(3)
+                .otherAbsenceEnt("none")
+                .build();
         return user;
     }
 
